--- a/archives/toutiao-search/2024-05-02.md
+++ b/archives/toutiao-search/2024-05-02.md
@@ -1,58 +1,76 @@
 # 2024-05-02
 
-共 217 条
+共 231 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu May 02 2024 18:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu May 02 2024 19:00:57 GMT+0800 (China Standard Time) -->
 1. [广东高速塌陷事故已致48死](https://so.toutiao.com/search?keyword=广东高速塌陷事故已致48死)
 1. [小米SU7全网首次大修](https://so.toutiao.com/search?keyword=小米SU7全网首次大修)
 1. [高铁万箭齐发科幻感一下拉满](https://so.toutiao.com/search?keyword=高铁万箭齐发科幻感一下拉满)
 1. [广东书记、省长面向塌方发生地三鞠躬](https://so.toutiao.com/search?keyword=广东书记、省长面向塌方发生地三鞠躬)
-1. [媒体：福建舰是最强常规动力航母](https://so.toutiao.com/search?keyword=媒体：福建舰是最强常规动力航母)
-1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
-1. [中华保险向梅大高速预付1000万元](https://so.toutiao.com/search?keyword=中华保险向梅大高速预付1000万元)
 1. [五一哈尔滨有一亿人吧](https://so.toutiao.com/search?keyword=五一哈尔滨有一亿人吧)
-1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
-1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
-1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
-1. [广东省委书记：塌方灾害教训十分深刻](https://so.toutiao.com/search?keyword=广东省委书记：塌方灾害教训十分深刻)
-1. [高速塌方灾害发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方灾害发布会全体默哀)
-1. [安徽72岁老人喜得贵子系谣言](https://so.toutiao.com/search?keyword=安徽72岁老人喜得贵子系谣言)
-1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
-1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
-1. [五一游客从长沙橘子洲挤到五一广场](https://so.toutiao.com/search?keyword=五一游客从长沙橘子洲挤到五一广场)
-1. [“王婆”五一开封说媒现场](https://so.toutiao.com/search?keyword=“王婆”五一开封说媒现场)
-1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
+1. [媒体：福建舰是最强常规动力航母](https://so.toutiao.com/search?keyword=媒体：福建舰是最强常规动力航母)
+1. [中华保险向梅大高速预付1000万元](https://so.toutiao.com/search?keyword=中华保险向梅大高速预付1000万元)
+1. [包被地铁门夹住 女子却不撒手](https://so.toutiao.com/search?keyword=包被地铁门夹住+女子却不撒手)
 1. [萌娃一拳打趴不倒翁玩具后疑惑歪头](https://so.toutiao.com/search?keyword=萌娃一拳打趴不倒翁玩具后疑惑歪头)
+1. [五一游客从长沙橘子洲挤到五一广场](https://so.toutiao.com/search?keyword=五一游客从长沙橘子洲挤到五一广场)
+1. [广东书记：塌方灾害教训十分深刻](https://so.toutiao.com/search?keyword=广东书记：塌方灾害教训十分深刻)
+1. [博主曝光“辣条刺客”按克标价](https://so.toutiao.com/search?keyword=博主曝光“辣条刺客”按克标价)
+1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
+1. [安徽72岁老人喜得贵子系谣言](https://so.toutiao.com/search?keyword=安徽72岁老人喜得贵子系谣言)
+1. [高速塌方灾害发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方灾害发布会全体默哀)
+1. [中国黄金需求创21年来新高](https://so.toutiao.com/search?keyword=中国黄金需求创21年来新高)
+1. [美夫妇中奖4.22亿美元将与朋友平分](https://so.toutiao.com/search?keyword=美夫妇中奖4.22亿美元将与朋友平分)
+1. [哈尔滨中央大街再现“最美人墙”](https://so.toutiao.com/search?keyword=哈尔滨中央大街再现“最美人墙”)
+1. [中使馆回应菲船只侵闯黄岩岛](https://so.toutiao.com/search?keyword=中使馆回应菲船只侵闯黄岩岛)
+1. [刘銮鸿女儿办婚礼 刘銮雄全家缺席](https://so.toutiao.com/search?keyword=刘銮鸿女儿办婚礼+刘銮雄全家缺席)
 1. [买方及周鸿祎回应未付清迈巴赫余款](https://so.toutiao.com/search?keyword=买方及周鸿祎回应未付清迈巴赫余款)
 1. [诱骗女生骑大马 男生涉嫌违法吗](https://so.toutiao.com/search?keyword=诱骗女生骑大马+男生涉嫌违法吗)
-1. [高速塌方救援有5个难点和风险点](https://so.toutiao.com/search?keyword=高速塌方救援有5个难点和风险点)
-1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
-1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
-1. [官方：深刻汲取高速塌方灾害教训](https://so.toutiao.com/search?keyword=官方：深刻汲取高速塌方灾害教训)
-1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
-1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
-1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
-1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
-1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
-1. [美国再次告诫以色列：勿进攻拉法](https://so.toutiao.com/search?keyword=美国再次告诫以色列：勿进攻拉法)
-1. [台前民代谈福建舰：航母是国力象征](https://so.toutiao.com/search?keyword=台前民代谈福建舰：航母是国力象征)
-1. [日本一小镇拉黑布遮挡富士山远景](https://so.toutiao.com/search?keyword=日本一小镇拉黑布遮挡富士山远景)
-1. [刘銮鸿女儿办婚礼 刘銮雄全家缺席](https://so.toutiao.com/search?keyword=刘銮鸿女儿办婚礼+刘銮雄全家缺席)
+1. [日元贬值到底谁吃亏谁受益](https://so.toutiao.com/search?keyword=日元贬值到底谁吃亏谁受益)
+1. [兵马俑一天就接待6万多游客](https://so.toutiao.com/search?keyword=兵马俑一天就接待6万多游客)
+1. [美强烈鼓励台参加世卫大会 中方回应](https://so.toutiao.com/search?keyword=美强烈鼓励台参加世卫大会+中方回应)
+1. [五一假期的重庆有多火爆](https://so.toutiao.com/search?keyword=五一假期的重庆有多火爆)
 1. [杭州西湖开启“人从众”模式](https://so.toutiao.com/search?keyword=杭州西湖开启“人从众”模式)
+1. [男子与父母离散60年后回家](https://so.toutiao.com/search?keyword=男子与父母离散60年后回家)
+1. [醉汉凌晨持刀进入店铺老板淡定应对](https://so.toutiao.com/search?keyword=醉汉凌晨持刀进入店铺老板淡定应对)
+1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
+1. [“王婆”五一假期开封说媒现场](https://so.toutiao.com/search?keyword=“王婆”五一假期开封说媒现场)
+1. [夫妻失联近1个月 最后定位在泰国](https://so.toutiao.com/search?keyword=夫妻失联近1个月+最后定位在泰国)
+1. [王石放弃退休金 田朴珺发文我养你](https://so.toutiao.com/search?keyword=王石放弃退休金+田朴珺发文我养你)
+1. [官方：深刻汲取高速塌方灾害教训](https://so.toutiao.com/search?keyword=官方：深刻汲取高速塌方灾害教训)
+1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
+1. [美国再次告诫以色列：勿进攻拉法](https://so.toutiao.com/search?keyword=美国再次告诫以色列：勿进攻拉法)
+1. [工人为蛟龙号装“眼睛”指纹被磨平](https://so.toutiao.com/search?keyword=工人为蛟龙号装“眼睛”指纹被磨平)
+1. [卢：如果输G6我们的赛季就将结束](https://so.toutiao.com/search?keyword=卢：如果输G6我们的赛季就将结束)
+1. [微暗之火南雅被继兄侵犯](https://so.toutiao.com/search?keyword=微暗之火南雅被继兄侵犯)
+1. [日本一小镇拉黑布遮挡富士山远景](https://so.toutiao.com/search?keyword=日本一小镇拉黑布遮挡富士山远景)
+1. [中国各地景区陆续迎来游客高峰](https://so.toutiao.com/search?keyword=中国各地景区陆续迎来游客高峰)
+1. [乌军：F-16战机最早本月抵达](https://so.toutiao.com/search?keyword=乌军：F-16战机最早本月抵达)
+1. [武契奇：感谢中企承建塞足球体育场](https://so.toutiao.com/search?keyword=武契奇：感谢中企承建塞足球体育场)
+1. [公安回应检查站警车撞人：抓捕行动](https://so.toutiao.com/search?keyword=公安回应检查站警车撞人：抓捕行动)
+1. [广东将尽快完成遇难者身份确认工作](https://so.toutiao.com/search?keyword=广东将尽快完成遇难者身份确认工作)
+1. [纪念妈祖诞辰1064周年大会举行](https://so.toutiao.com/search?keyword=纪念妈祖诞辰1064周年大会举行)
+1. [港股5月开局再上18000点创今年新高](https://so.toutiao.com/search?keyword=港股5月开局再上18000点创今年新高)
+1. [黄景瑜说不敢认领拍军警是统治区](https://so.toutiao.com/search?keyword=黄景瑜说不敢认领拍军警是统治区)
+1. [奔驰男违停骂人 交警来后瞬间老实](https://so.toutiao.com/search?keyword=奔驰男违停骂人+交警来后瞬间老实)
+1. [哥伦比亚总统宣布将与以色列断交](https://so.toutiao.com/search?keyword=哥伦比亚总统宣布将与以色列断交)
+1. [高速塌方现场 85后司机救下6人](https://so.toutiao.com/search?keyword=高速塌方现场+85后司机救下6人)
+1. [广东省委书记：塌方灾害教训十分深刻](https://so.toutiao.com/search?keyword=广东省委书记：塌方灾害教训十分深刻)
+1. [梅大高速塌陷货车司机夫妇喊停后车](https://so.toutiao.com/search?keyword=梅大高速塌陷货车司机夫妇喊停后车)
+1. [“王婆”五一开封说媒现场](https://so.toutiao.com/search?keyword=“王婆”五一开封说媒现场)
+1. [高速塌方家属瘫坐在地记者几度哽咽](https://so.toutiao.com/search?keyword=高速塌方家属瘫坐在地记者几度哽咽)
+1. [高速塌方救援有5个难点和风险点](https://so.toutiao.com/search?keyword=高速塌方救援有5个难点和风险点)
+1. [网友寻疑似因梅大高速事故失联的人](https://so.toutiao.com/search?keyword=网友寻疑似因梅大高速事故失联的人)
+1. [台前民代谈福建舰：航母是国力象征](https://so.toutiao.com/search?keyword=台前民代谈福建舰：航母是国力象征)
 1. [相比前2艘航母 福建舰海试有何不同](https://so.toutiao.com/search?keyword=相比前2艘航母+福建舰海试有何不同)
 1. [美众院通过“反犹太主义意识法案”](https://so.toutiao.com/search?keyword=美众院通过“反犹太主义意识法案”)
-1. [卢：如果输G6我们的赛季就将结束](https://so.toutiao.com/search?keyword=卢：如果输G6我们的赛季就将结束)
 1. [一家五口开车遇塌方 3失联1进ICU](https://so.toutiao.com/search?keyword=一家五口开车遇塌方+3失联1进ICU)
 1. [成都蓉城与武汉三镇球员爆发冲突](https://so.toutiao.com/search?keyword=成都蓉城与武汉三镇球员爆发冲突)
 1. [韩国国会表决通过《梨泰院特别法》](https://so.toutiao.com/search?keyword=韩国国会表决通过《梨泰院特别法》)
 1. [小米SU7 Max四驱版赛道漂移](https://so.toutiao.com/search?keyword=小米SU7+Max四驱版赛道漂移)
 1. [飞香港航班两次降落失败剧烈颠簸](https://so.toutiao.com/search?keyword=飞香港航班两次降落失败剧烈颠簸)
-1. [杭州西湖边连续第9年现最美人墙](https://so.toutiao.com/search?keyword=杭州西湖边连续第9年现最美人墙)
 1. [赣州特斯拉失控翻滚致1重伤3轻伤](https://so.toutiao.com/search?keyword=赣州特斯拉失控翻滚致1重伤3轻伤)
-1. [兵马俑一天就接待6万多游客](https://so.toutiao.com/search?keyword=兵马俑一天就接待6万多游客)
 1. [五一假期首日四川景区迎来游客热潮](https://so.toutiao.com/search?keyword=五一假期首日四川景区迎来游客热潮)
-1. [黄景瑜说不敢认领拍军警是统治区](https://so.toutiao.com/search?keyword=黄景瑜说不敢认领拍军警是统治区)
 1. [参战老兵祭奠老山战役牺牲战友](https://so.toutiao.com/search?keyword=参战老兵祭奠老山战役牺牲战友)
 1. [高速塌方事故发布会全体默哀](https://so.toutiao.com/search?keyword=高速塌方事故发布会全体默哀)
 1. [美拟禁止华为等参与无线设备认证项目](https://so.toutiao.com/search?keyword=美拟禁止华为等参与无线设备认证项目)
@@ -66,9 +84,7 @@
 1. [洁丽雅“毛巾少爷”拍短剧出圈](https://so.toutiao.com/search?keyword=洁丽雅“毛巾少爷”拍短剧出圈)
 1. [成龙20本签名书变2本](https://so.toutiao.com/search?keyword=成龙20本签名书变2本)
 1. [福建舰海试版《让我们荡起双桨》](https://so.toutiao.com/search?keyword=福建舰海试版《让我们荡起双桨》)
-1. [美演习出动B2轰炸机被指对华秀肌肉](https://so.toutiao.com/search?keyword=美演习出动B2轰炸机被指对华秀肌肉)
 1. [申花跟队质疑足协评议疑与事实不符](https://so.toutiao.com/search?keyword=申花跟队质疑足协评议疑与事实不符)
-1. [五一假期的重庆有多火爆](https://so.toutiao.com/search?keyword=五一假期的重庆有多火爆)
 1. [独行侠大胜快船总比分3-2领先](https://so.toutiao.com/search?keyword=独行侠大胜快船总比分3-2领先)
 1. [所罗门群岛议会投票选举新一届总理](https://so.toutiao.com/search?keyword=所罗门群岛议会投票选举新一届总理)
 1. [开封万岁山举办“全国媒婆大赛”](https://so.toutiao.com/search?keyword=开封万岁山举办“全国媒婆大赛”)
@@ -107,7 +123,6 @@
 1. [高速事故救6人司机讲述救援经过](https://so.toutiao.com/search?keyword=高速事故救6人司机讲述救援经过)
 1. [河南一新建大桥桥面出现多个黑洞](https://so.toutiao.com/search?keyword=河南一新建大桥桥面出现多个黑洞)
 1. [女子称自家车在梅大高速塌陷前冲过](https://so.toutiao.com/search?keyword=女子称自家车在梅大高速塌陷前冲过)
-1. [哥伦比亚总统宣布将与以色列断交](https://so.toutiao.com/search?keyword=哥伦比亚总统宣布将与以色列断交)
 1. [以军空袭幸存者：我们还能去哪里](https://so.toutiao.com/search?keyword=以军空袭幸存者：我们还能去哪里)
 1. [媒体：华南虎内线受制于本钢](https://so.toutiao.com/search?keyword=媒体：华南虎内线受制于本钢)
 1. [韩国积极谋求入伙奥库斯说明了什么](https://so.toutiao.com/search?keyword=韩国积极谋求入伙奥库斯说明了什么)
@@ -127,7 +142,6 @@
 1. [梅大高速塌陷前后卫星地图对比](https://so.toutiao.com/search?keyword=梅大高速塌陷前后卫星地图对比)
 1. [梅州高速塌方目击者：爆炸声不断](https://so.toutiao.com/search?keyword=梅州高速塌方目击者：爆炸声不断)
 1. [武汉位列五一首日热门目的地第六](https://so.toutiao.com/search?keyword=武汉位列五一首日热门目的地第六)
-1. [公安回应检查站警车撞人：抓捕行动](https://so.toutiao.com/search?keyword=公安回应检查站警车撞人：抓捕行动)
 1. [专家：俄军或将对乌发起大规模攻势](https://so.toutiao.com/search?keyword=专家：俄军或将对乌发起大规模攻势)
 1. [66股符合ST新规](https://so.toutiao.com/search?keyword=66股符合ST新规)
 1. [杜文龙解读福建舰海试的关键细节](https://so.toutiao.com/search?keyword=杜文龙解读福建舰海试的关键细节)
